parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> <empty>
Rule 2     program -> statements
Rule 3     statements -> command
Rule 4     statements -> statements command
Rule 5     command -> ID ASSIGN expression COLON
Rule 6     if_start -> IF
Rule 7     if_expression -> expression
Rule 8     if_then_begin -> THEN BEGIN
Rule 9     if_else_begin -> ELSE BEGIN
Rule 10    command -> if_start if_expression if_then_begin statements END COLON
Rule 11    command -> if_start if_expression if_then_begin statements END if_else_begin statements END COLON
Rule 12    while_start -> WHILE
Rule 13    while_expression -> expression
Rule 14    while_body -> DO statements DONE COLON
Rule 15    command -> while_start while_expression while_body
Rule 16    expression -> expression relational_equality_comparison_operation comparison
Rule 17    expression -> comparison
Rule 18    comparison -> comparison relational_inequality_comparison_operation arithmetic_expression
Rule 19    comparison -> arithmetic_expression
Rule 20    arithmetic_expression -> arithmetic_expression plus_minus_arithmetic_operation expression_term
Rule 21    arithmetic_expression -> expression_term
Rule 22    expression_term -> expression_term times_divide_arithmetic_operation factor
Rule 23    expression_term -> factor
Rule 24    factor -> LPAREN expression RPAREN
Rule 25    factor -> ID
Rule 26    factor -> plus_minus_arithmetic_operation ID
Rule 27    factor -> times_divide_arithmetic_operation ID
Rule 28    factor -> INTEGER
Rule 29    factor -> plus_minus_arithmetic_operation INTEGER
Rule 30    factor -> times_divide_arithmetic_operation INTEGER
Rule 31    factor -> REAL
Rule 32    factor -> plus_minus_arithmetic_operation REAL
Rule 33    factor -> times_divide_arithmetic_operation REAL
Rule 34    plus_minus_arithmetic_operation -> PLUS
Rule 35    plus_minus_arithmetic_operation -> MINUS
Rule 36    times_divide_arithmetic_operation -> TIMES
Rule 37    times_divide_arithmetic_operation -> DIVIDE
Rule 38    relational_equality_comparison_operation -> EQUAL
Rule 39    relational_equality_comparison_operation -> NEQUAL
Rule 40    relational_inequality_comparison_operation -> LEQUAL
Rule 41    relational_inequality_comparison_operation -> GEQUAL
Rule 42    relational_inequality_comparison_operation -> LTHEN
Rule 43    relational_inequality_comparison_operation -> GTHEN
Rule 44    command -> PRINT expression COLON

Terminals, with rules where they appear

ASSIGN               : 5
BEGIN                : 8 9
COLON                : 5 10 11 14 44
DIVIDE               : 37
DO                   : 14
DONE                 : 14
ELSE                 : 9
END                  : 10 11 11
EQUAL                : 38
GEQUAL               : 41
GTHEN                : 43
ID                   : 5 25 26 27
IF                   : 6
INTEGER              : 28 29 30
LEQUAL               : 40
LPAREN               : 24
LTHEN                : 42
MINUS                : 35
NEQUAL               : 39
PLUS                 : 34
PRINT                : 44
REAL                 : 31 32 33
RPAREN               : 24
THEN                 : 8
TIMES                : 36
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

arithmetic_expression : 18 19 20
command              : 3 4
comparison           : 16 17 18
expression           : 5 7 13 16 24 44
expression_term      : 20 21 22
factor               : 22 23
if_else_begin        : 11
if_expression        : 10 11
if_start             : 10 11
if_then_begin        : 10 11
plus_minus_arithmetic_operation : 20 26 29 32
program              : 0
relational_equality_comparison_operation : 16
relational_inequality_comparison_operation : 18
statements           : 2 4 10 11 11 14
times_divide_arithmetic_operation : 22 27 30 33
while_body           : 15
while_expression     : 15
while_start          : 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> .
    (2) program -> . statements
    (3) statements -> . command
    (4) statements -> . statements command
    (5) command -> . ID ASSIGN expression COLON
    (10) command -> . if_start if_expression if_then_begin statements END COLON
    (11) command -> . if_start if_expression if_then_begin statements END if_else_begin statements END COLON
    (15) command -> . while_start while_expression while_body
    (44) command -> . PRINT expression COLON
    (6) if_start -> . IF
    (12) while_start -> . WHILE

    $end            reduce using rule 1 (program -> .)
    ID              shift and go to state 9
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 4

    while_start                    shift and go to state 1
    statements                     shift and go to state 2
    program                        shift and go to state 5
    command                        shift and go to state 6
    if_start                       shift and go to state 3

state 1

    (15) command -> while_start . while_expression while_body
    (13) while_expression -> . expression
    (16) expression -> . expression relational_equality_comparison_operation comparison
    (17) expression -> . comparison
    (18) comparison -> . comparison relational_inequality_comparison_operation arithmetic_expression
    (19) comparison -> . arithmetic_expression
    (20) arithmetic_expression -> . arithmetic_expression plus_minus_arithmetic_operation expression_term
    (21) arithmetic_expression -> . expression_term
    (22) expression_term -> . expression_term times_divide_arithmetic_operation factor
    (23) expression_term -> . factor
    (24) factor -> . LPAREN expression RPAREN
    (25) factor -> . ID
    (26) factor -> . plus_minus_arithmetic_operation ID
    (27) factor -> . times_divide_arithmetic_operation ID
    (28) factor -> . INTEGER
    (29) factor -> . plus_minus_arithmetic_operation INTEGER
    (30) factor -> . times_divide_arithmetic_operation INTEGER
    (31) factor -> . REAL
    (32) factor -> . plus_minus_arithmetic_operation REAL
    (33) factor -> . times_divide_arithmetic_operation REAL
    (34) plus_minus_arithmetic_operation -> . PLUS
    (35) plus_minus_arithmetic_operation -> . MINUS
    (36) times_divide_arithmetic_operation -> . TIMES
    (37) times_divide_arithmetic_operation -> . DIVIDE

    LPAREN          shift and go to state 19
    ID              shift and go to state 24
    INTEGER         shift and go to state 21
    REAL            shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 11

    arithmetic_expression          shift and go to state 10
    expression_term                shift and go to state 12
    comparison                     shift and go to state 13
    factor                         shift and go to state 14
    while_expression               shift and go to state 18
    plus_minus_arithmetic_operation shift and go to state 20
    expression                     shift and go to state 23
    times_divide_arithmetic_operation shift and go to state 25

state 2

    (2) program -> statements .
    (4) statements -> statements . command
    (5) command -> . ID ASSIGN expression COLON
    (10) command -> . if_start if_expression if_then_begin statements END COLON
    (11) command -> . if_start if_expression if_then_begin statements END if_else_begin statements END COLON
    (15) command -> . while_start while_expression while_body
    (44) command -> . PRINT expression COLON
    (6) if_start -> . IF
    (12) while_start -> . WHILE

    $end            reduce using rule 2 (program -> statements .)
    ID              shift and go to state 9
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 4

    while_start                    shift and go to state 1
    if_start                       shift and go to state 3
    command                        shift and go to state 26

state 3

    (10) command -> if_start . if_expression if_then_begin statements END COLON
    (11) command -> if_start . if_expression if_then_begin statements END if_else_begin statements END COLON
    (7) if_expression -> . expression
    (16) expression -> . expression relational_equality_comparison_operation comparison
    (17) expression -> . comparison
    (18) comparison -> . comparison relational_inequality_comparison_operation arithmetic_expression
    (19) comparison -> . arithmetic_expression
    (20) arithmetic_expression -> . arithmetic_expression plus_minus_arithmetic_operation expression_term
    (21) arithmetic_expression -> . expression_term
    (22) expression_term -> . expression_term times_divide_arithmetic_operation factor
    (23) expression_term -> . factor
    (24) factor -> . LPAREN expression RPAREN
    (25) factor -> . ID
    (26) factor -> . plus_minus_arithmetic_operation ID
    (27) factor -> . times_divide_arithmetic_operation ID
    (28) factor -> . INTEGER
    (29) factor -> . plus_minus_arithmetic_operation INTEGER
    (30) factor -> . times_divide_arithmetic_operation INTEGER
    (31) factor -> . REAL
    (32) factor -> . plus_minus_arithmetic_operation REAL
    (33) factor -> . times_divide_arithmetic_operation REAL
    (34) plus_minus_arithmetic_operation -> . PLUS
    (35) plus_minus_arithmetic_operation -> . MINUS
    (36) times_divide_arithmetic_operation -> . TIMES
    (37) times_divide_arithmetic_operation -> . DIVIDE

    LPAREN          shift and go to state 19
    ID              shift and go to state 24
    INTEGER         shift and go to state 21
    REAL            shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 11

    arithmetic_expression          shift and go to state 10
    comparison                     shift and go to state 13
    expression_term                shift and go to state 12
    plus_minus_arithmetic_operation shift and go to state 20
    if_expression                  shift and go to state 27
    factor                         shift and go to state 14
    expression                     shift and go to state 28
    times_divide_arithmetic_operation shift and go to state 25

state 4

    (12) while_start -> WHILE .

    LPAREN          reduce using rule 12 (while_start -> WHILE .)
    ID              reduce using rule 12 (while_start -> WHILE .)
    INTEGER         reduce using rule 12 (while_start -> WHILE .)
    REAL            reduce using rule 12 (while_start -> WHILE .)
    PLUS            reduce using rule 12 (while_start -> WHILE .)
    MINUS           reduce using rule 12 (while_start -> WHILE .)
    TIMES           reduce using rule 12 (while_start -> WHILE .)
    DIVIDE          reduce using rule 12 (while_start -> WHILE .)


state 5

    (0) S' -> program .



state 6

    (3) statements -> command .

    END             reduce using rule 3 (statements -> command .)
    ID              reduce using rule 3 (statements -> command .)
    PRINT           reduce using rule 3 (statements -> command .)
    IF              reduce using rule 3 (statements -> command .)
    WHILE           reduce using rule 3 (statements -> command .)
    DONE            reduce using rule 3 (statements -> command .)
    $end            reduce using rule 3 (statements -> command .)


state 7

    (44) command -> PRINT . expression COLON
    (16) expression -> . expression relational_equality_comparison_operation comparison
    (17) expression -> . comparison
    (18) comparison -> . comparison relational_inequality_comparison_operation arithmetic_expression
    (19) comparison -> . arithmetic_expression
    (20) arithmetic_expression -> . arithmetic_expression plus_minus_arithmetic_operation expression_term
    (21) arithmetic_expression -> . expression_term
    (22) expression_term -> . expression_term times_divide_arithmetic_operation factor
    (23) expression_term -> . factor
    (24) factor -> . LPAREN expression RPAREN
    (25) factor -> . ID
    (26) factor -> . plus_minus_arithmetic_operation ID
    (27) factor -> . times_divide_arithmetic_operation ID
    (28) factor -> . INTEGER
    (29) factor -> . plus_minus_arithmetic_operation INTEGER
    (30) factor -> . times_divide_arithmetic_operation INTEGER
    (31) factor -> . REAL
    (32) factor -> . plus_minus_arithmetic_operation REAL
    (33) factor -> . times_divide_arithmetic_operation REAL
    (34) plus_minus_arithmetic_operation -> . PLUS
    (35) plus_minus_arithmetic_operation -> . MINUS
    (36) times_divide_arithmetic_operation -> . TIMES
    (37) times_divide_arithmetic_operation -> . DIVIDE

    LPAREN          shift and go to state 19
    ID              shift and go to state 24
    INTEGER         shift and go to state 21
    REAL            shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 11

    arithmetic_expression          shift and go to state 10
    comparison                     shift and go to state 13
    expression_term                shift and go to state 12
    plus_minus_arithmetic_operation shift and go to state 20
    factor                         shift and go to state 14
    expression                     shift and go to state 29
    times_divide_arithmetic_operation shift and go to state 25

state 8

    (6) if_start -> IF .

    LPAREN          reduce using rule 6 (if_start -> IF .)
    ID              reduce using rule 6 (if_start -> IF .)
    INTEGER         reduce using rule 6 (if_start -> IF .)
    REAL            reduce using rule 6 (if_start -> IF .)
    PLUS            reduce using rule 6 (if_start -> IF .)
    MINUS           reduce using rule 6 (if_start -> IF .)
    TIMES           reduce using rule 6 (if_start -> IF .)
    DIVIDE          reduce using rule 6 (if_start -> IF .)


state 9

    (5) command -> ID . ASSIGN expression COLON

    ASSIGN          shift and go to state 30


state 10

    (19) comparison -> arithmetic_expression .
    (20) arithmetic_expression -> arithmetic_expression . plus_minus_arithmetic_operation expression_term
    (34) plus_minus_arithmetic_operation -> . PLUS
    (35) plus_minus_arithmetic_operation -> . MINUS

    LEQUAL          reduce using rule 19 (comparison -> arithmetic_expression .)
    GEQUAL          reduce using rule 19 (comparison -> arithmetic_expression .)
    LTHEN           reduce using rule 19 (comparison -> arithmetic_expression .)
    GTHEN           reduce using rule 19 (comparison -> arithmetic_expression .)
    RPAREN          reduce using rule 19 (comparison -> arithmetic_expression .)
    EQUAL           reduce using rule 19 (comparison -> arithmetic_expression .)
    NEQUAL          reduce using rule 19 (comparison -> arithmetic_expression .)
    THEN            reduce using rule 19 (comparison -> arithmetic_expression .)
    COLON           reduce using rule 19 (comparison -> arithmetic_expression .)
    DO              reduce using rule 19 (comparison -> arithmetic_expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17

    plus_minus_arithmetic_operation shift and go to state 31

state 11

    (37) times_divide_arithmetic_operation -> DIVIDE .

    LPAREN          reduce using rule 37 (times_divide_arithmetic_operation -> DIVIDE .)
    ID              reduce using rule 37 (times_divide_arithmetic_operation -> DIVIDE .)
    INTEGER         reduce using rule 37 (times_divide_arithmetic_operation -> DIVIDE .)
    REAL            reduce using rule 37 (times_divide_arithmetic_operation -> DIVIDE .)
    PLUS            reduce using rule 37 (times_divide_arithmetic_operation -> DIVIDE .)
    MINUS           reduce using rule 37 (times_divide_arithmetic_operation -> DIVIDE .)
    TIMES           reduce using rule 37 (times_divide_arithmetic_operation -> DIVIDE .)
    DIVIDE          reduce using rule 37 (times_divide_arithmetic_operation -> DIVIDE .)


state 12

    (21) arithmetic_expression -> expression_term .
    (22) expression_term -> expression_term . times_divide_arithmetic_operation factor
    (36) times_divide_arithmetic_operation -> . TIMES
    (37) times_divide_arithmetic_operation -> . DIVIDE

    PLUS            reduce using rule 21 (arithmetic_expression -> expression_term .)
    MINUS           reduce using rule 21 (arithmetic_expression -> expression_term .)
    LEQUAL          reduce using rule 21 (arithmetic_expression -> expression_term .)
    GEQUAL          reduce using rule 21 (arithmetic_expression -> expression_term .)
    LTHEN           reduce using rule 21 (arithmetic_expression -> expression_term .)
    GTHEN           reduce using rule 21 (arithmetic_expression -> expression_term .)
    EQUAL           reduce using rule 21 (arithmetic_expression -> expression_term .)
    NEQUAL          reduce using rule 21 (arithmetic_expression -> expression_term .)
    DO              reduce using rule 21 (arithmetic_expression -> expression_term .)
    THEN            reduce using rule 21 (arithmetic_expression -> expression_term .)
    COLON           reduce using rule 21 (arithmetic_expression -> expression_term .)
    RPAREN          reduce using rule 21 (arithmetic_expression -> expression_term .)
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 11

    times_divide_arithmetic_operation shift and go to state 32

state 13

    (17) expression -> comparison .
    (18) comparison -> comparison . relational_inequality_comparison_operation arithmetic_expression
    (40) relational_inequality_comparison_operation -> . LEQUAL
    (41) relational_inequality_comparison_operation -> . GEQUAL
    (42) relational_inequality_comparison_operation -> . LTHEN
    (43) relational_inequality_comparison_operation -> . GTHEN

    RPAREN          reduce using rule 17 (expression -> comparison .)
    EQUAL           reduce using rule 17 (expression -> comparison .)
    NEQUAL          reduce using rule 17 (expression -> comparison .)
    COLON           reduce using rule 17 (expression -> comparison .)
    THEN            reduce using rule 17 (expression -> comparison .)
    DO              reduce using rule 17 (expression -> comparison .)
    LEQUAL          shift and go to state 36
    GEQUAL          shift and go to state 33
    LTHEN           shift and go to state 35
    GTHEN           shift and go to state 34

    relational_inequality_comparison_operation shift and go to state 37

state 14

    (23) expression_term -> factor .

    TIMES           reduce using rule 23 (expression_term -> factor .)
    DIVIDE          reduce using rule 23 (expression_term -> factor .)
    PLUS            reduce using rule 23 (expression_term -> factor .)
    MINUS           reduce using rule 23 (expression_term -> factor .)
    LEQUAL          reduce using rule 23 (expression_term -> factor .)
    GEQUAL          reduce using rule 23 (expression_term -> factor .)
    LTHEN           reduce using rule 23 (expression_term -> factor .)
    GTHEN           reduce using rule 23 (expression_term -> factor .)
    COLON           reduce using rule 23 (expression_term -> factor .)
    EQUAL           reduce using rule 23 (expression_term -> factor .)
    NEQUAL          reduce using rule 23 (expression_term -> factor .)
    DO              reduce using rule 23 (expression_term -> factor .)
    THEN            reduce using rule 23 (expression_term -> factor .)
    RPAREN          reduce using rule 23 (expression_term -> factor .)


state 15

    (31) factor -> REAL .

    TIMES           reduce using rule 31 (factor -> REAL .)
    DIVIDE          reduce using rule 31 (factor -> REAL .)
    PLUS            reduce using rule 31 (factor -> REAL .)
    MINUS           reduce using rule 31 (factor -> REAL .)
    LEQUAL          reduce using rule 31 (factor -> REAL .)
    GEQUAL          reduce using rule 31 (factor -> REAL .)
    LTHEN           reduce using rule 31 (factor -> REAL .)
    GTHEN           reduce using rule 31 (factor -> REAL .)
    RPAREN          reduce using rule 31 (factor -> REAL .)
    EQUAL           reduce using rule 31 (factor -> REAL .)
    NEQUAL          reduce using rule 31 (factor -> REAL .)
    COLON           reduce using rule 31 (factor -> REAL .)
    DO              reduce using rule 31 (factor -> REAL .)
    THEN            reduce using rule 31 (factor -> REAL .)


state 16

    (34) plus_minus_arithmetic_operation -> PLUS .

    ID              reduce using rule 34 (plus_minus_arithmetic_operation -> PLUS .)
    INTEGER         reduce using rule 34 (plus_minus_arithmetic_operation -> PLUS .)
    REAL            reduce using rule 34 (plus_minus_arithmetic_operation -> PLUS .)
    LPAREN          reduce using rule 34 (plus_minus_arithmetic_operation -> PLUS .)
    PLUS            reduce using rule 34 (plus_minus_arithmetic_operation -> PLUS .)
    MINUS           reduce using rule 34 (plus_minus_arithmetic_operation -> PLUS .)
    TIMES           reduce using rule 34 (plus_minus_arithmetic_operation -> PLUS .)
    DIVIDE          reduce using rule 34 (plus_minus_arithmetic_operation -> PLUS .)


state 17

    (35) plus_minus_arithmetic_operation -> MINUS .

    ID              reduce using rule 35 (plus_minus_arithmetic_operation -> MINUS .)
    INTEGER         reduce using rule 35 (plus_minus_arithmetic_operation -> MINUS .)
    REAL            reduce using rule 35 (plus_minus_arithmetic_operation -> MINUS .)
    LPAREN          reduce using rule 35 (plus_minus_arithmetic_operation -> MINUS .)
    PLUS            reduce using rule 35 (plus_minus_arithmetic_operation -> MINUS .)
    MINUS           reduce using rule 35 (plus_minus_arithmetic_operation -> MINUS .)
    TIMES           reduce using rule 35 (plus_minus_arithmetic_operation -> MINUS .)
    DIVIDE          reduce using rule 35 (plus_minus_arithmetic_operation -> MINUS .)


state 18

    (15) command -> while_start while_expression . while_body
    (14) while_body -> . DO statements DONE COLON

    DO              shift and go to state 38

    while_body                     shift and go to state 39

state 19

    (24) factor -> LPAREN . expression RPAREN
    (16) expression -> . expression relational_equality_comparison_operation comparison
    (17) expression -> . comparison
    (18) comparison -> . comparison relational_inequality_comparison_operation arithmetic_expression
    (19) comparison -> . arithmetic_expression
    (20) arithmetic_expression -> . arithmetic_expression plus_minus_arithmetic_operation expression_term
    (21) arithmetic_expression -> . expression_term
    (22) expression_term -> . expression_term times_divide_arithmetic_operation factor
    (23) expression_term -> . factor
    (24) factor -> . LPAREN expression RPAREN
    (25) factor -> . ID
    (26) factor -> . plus_minus_arithmetic_operation ID
    (27) factor -> . times_divide_arithmetic_operation ID
    (28) factor -> . INTEGER
    (29) factor -> . plus_minus_arithmetic_operation INTEGER
    (30) factor -> . times_divide_arithmetic_operation INTEGER
    (31) factor -> . REAL
    (32) factor -> . plus_minus_arithmetic_operation REAL
    (33) factor -> . times_divide_arithmetic_operation REAL
    (34) plus_minus_arithmetic_operation -> . PLUS
    (35) plus_minus_arithmetic_operation -> . MINUS
    (36) times_divide_arithmetic_operation -> . TIMES
    (37) times_divide_arithmetic_operation -> . DIVIDE

    LPAREN          shift and go to state 19
    ID              shift and go to state 24
    INTEGER         shift and go to state 21
    REAL            shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 11

    arithmetic_expression          shift and go to state 10
    comparison                     shift and go to state 13
    expression_term                shift and go to state 12
    plus_minus_arithmetic_operation shift and go to state 20
    factor                         shift and go to state 14
    expression                     shift and go to state 40
    times_divide_arithmetic_operation shift and go to state 25

state 20

    (26) factor -> plus_minus_arithmetic_operation . ID
    (29) factor -> plus_minus_arithmetic_operation . INTEGER
    (32) factor -> plus_minus_arithmetic_operation . REAL

    ID              shift and go to state 42
    INTEGER         shift and go to state 43
    REAL            shift and go to state 41


state 21

    (28) factor -> INTEGER .
